Added ESLint, Prettier, Husky and LintStaged

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,11 @@
   "parserOptions": {
     "ecmaVersion": 2020
   },
-             "extends": ["eslint:recommended", "react-app", "eslint-config-prettier"]
+  "extends": ["eslint:recommended", "react-app", "eslint-config-prettier"],
+  "overrides": [
+    {
+      "files": ["**/*.ts?(x)"],
+      "rules": {}
+    }
+  ]
 }
